@@ -2,22 +2,10 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.61])
-AC_INIT([manpages-zh],[1.5.4.90],[https://github.com/man-pages-zh/manpages-zh/issues])
+AC_INIT([manpages-zh],[1.5.90],[https://github.com/man-pages-zh/manpages-zh/issues])
 AC_CONFIG_SRCDIR([src/man1/basename.1])
 AM_INIT_AUTOMAKE([subdir-objects])
 AM_MAINTAINER_MODE
-
-AC_ARG_ENABLE([utf8],
-              [AS_HELP_STRING([--disable-utf8],
-                              [don not generate manpages in utf8 encoding,
-                               use gbk and big5 encoding])],
-              [case "${enableval}" in
-                       yes) utf8=true ;;
-                no) utf8=false ;;
-                *) AC_MSG_ERROR([bad value ${enableval} for --enable-utf8]) ;;
-                esac],
-              [utf8=true])
-AM_CONDITIONAL([UTF8], [test x$utf8 = xtrue])
 
 AC_ARG_ENABLE([append_colophon],
               [AS_HELP_STRING([--disable-append-colophon],
