@@ -10,13 +10,8 @@ endif
 
 man_MANS = $(MANPAGES)
 
-if UTF8
 %.1: $(srcdir)/../%.1
 	$(APPEND_COLOPHON) < $< > $@
-else !UTF8
-%.1: $(srcdir)/../%.1
-	$(APPEND_COLOPHON) < $< | iconv -f utf8 -t gbk -o $@
-endif !UTF8
 
 clean-local:
 	rm -f $(man_MANS)
